--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -4,20 +4,15 @@
 {% endblock %}
 
 {% block body %}
-{% include "nav.html.twig" %}
-<div class="jumbotron jumbotron-fluid">
-    <div class="container">
-        <h1 class="display-3">Fluid jumbo heading</h1>
-        <p class="lead">Jumbo helper text</p>
-        <hr class="my-2">
-        <p>More info</p>
-        <p class="lead">
-            <a class="btn btn-primary btn-lg" href="Jumbo action link" role="button">Jumbo action name</a>
-        </p>
+    <div>
+        {% include "nav.html.twig" %}
     </div>
-</div>
-    <h1>Mon Blog</h1>
-    <p>Page d'accueil</p>
 
-    <p><a href="{{ path('actualites_articles') }}">Liste des Articles</a></p>
-{% endblock %}
+
+</div>
+<h1>Mon Blog</h1>
+<p>Page d'accueil</p>
+
+<p>
+    <a href="{{ path('actualites_articles') }}">Liste des Articles</a>
+</p>{% endblock %}
