--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -1,26 +1,35 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-  <nav class="navbar navbar-expand-lg  bg-dark" >
+  <nav class="navbar navbar-expand-lg bg-dark" >
     <div class="container text-white">
-      <a class="navbar-brand" href="index.html">Blog en tout genre</a>
+      <a class="navbar-brand" href="index.html"><i class="far fa-newspaper"></i> Blog</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
         <i class="fas fa-bars"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('actualites_articles') }}">Article</a>
+            <a class="nav-link" href="{{ path('actualites_articles') }}"><i class="fas fa-newspaper"></i> Article</a>
           </li>
+
+        
+          {% if is_granted('ROLE_USER') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{path('app_logout')}}"><i class="fas fa-user-slash"></i> Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item {% if mainNavLogin is defined %}active{% endif %}">
+                            <a class="nav-link" href="{{path('app_login')}}"><i class="fas fa-user"></i> Connexion</a>
+                        </li>
+                        <li class="nav-item {% if mainNavRegistration is defined %}active{% endif %}">
+                            <a class="nav-link" href="{{path('app_register')}}"><i class="fas fa-user-plus"></i> Inscription</a>
+                        </li>
+                    {% endif %}
+
+          
           <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_login') }}">Connection</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html"><i class="fas fa-comment-alt"></i> Contact</a>
           </li>
         </ul>
       </div>
