--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -10,33 +10,31 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Bonjour {{ app.user.username }}, <a href="{{ path('app_logout') }}">Deconnection</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail" class="sr-only">Email</label>
+    <h1 class="h3 mb-3 font-weight-normal">Connectez vous</h1>
+    <label for="inputEmail" class="sr-only">E-mail</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
+    <label for="inputPassword" class="sr-only">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
+    
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" name="_remember_me"> Remember me
+                <input type="checkbox" name="_remember_me"> Garder session active
             </label>
         </div>
-    #}
+    
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Valider
     </button>
 </form>
 {% endblock %}
